--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "10.16_postivity_board_frontend",
   "version": "0.1.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "webpack serve --config config/webpack.dev.js",
+    "build": "webpack serve --config config/webpack.prod.js",
     "format:es": "prettier --write 'src/'",
     "format:check:es": "prettier --check 'src/'",
     "lint:es": "eslint src/ --fix",
@@ -26,11 +24,13 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "styled-jsx": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -40,8 +40,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.5.1",
-    "typescript": "4.4.2"
+    "ts-loader": "^9.2.8",
+    "typescript": "4.4.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   },
   "browserslist": {
     "production": [
